[workspace]
resolver = "3"
members = [
    "cli_production_smoke",
    "cli_agent_logs_demo",
    "cli_plugin_lifecycle",
    "custom_plugin_install",
    "log_rotation_handling",
    "cli_cicd_integration",
    "plugin_system",
    "workflow_orchestration",
    "wasm_plugin",
    "multi_agent_coordination",
    "monitoring_dashboard",
    "visual_debugger_demo",
    "config",
    "chat_stream",
    "secretary_agent",
    "react_agent",
    "rhai_scripting",
    "runtime_periodic_runner",
    "runtime_example",
    "hitl_secretary",
    "streaming_persistence",
    "streaming_manual_persistence",
    "agent_with_plugins_and_rhai",
    "financial_compliance_agent",
    "rhai_hot_reload",
    "adaptive_collaboration_agent",
    "llm_tts_streaming",
    "agent_from_database_streaming",
    "workflow_dsl",
    "reflection_agent",
    "tool_routing",
    "runtime_message_bus_backpressure",
    "rag_pipeline",
    "agent_memory",
    "hitl_v2",
    "agent_builder",
    "workflow_viz",
    "message_graph_validation",
    "message_graph_executor_runtime",
    "context_compression",
    "structured_output",
    "control_plane",
    "context_window_demo",
    "compression_examples",
    "admission_gate_demo",
    "integrations_demo",
    "native_dataflow",
    "mcp_tools",
    "memory_scheduler_demo",
    "cli_doctor_demo",
    "capability_discovery",
    "rag_retrieval_demo",
    "rag_indexing_demo",
    "gateway_admin_demo",
    "gateway_live_demo",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"
tokio = { version = "1", features = ["full", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["net"] }
uuid = { version = "1.7", features = ["v4", "v7"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0"
futures = "0.3"
parking_lot = "0.12"
crossbeam-channel = "0.5"
dashmap = "5.5"
eyre = "0.6"
flume = "0.10"

# Hot-reload support
notify = { version = "6.1", features = ["serde"] }
libloading = "0.8"
sha2 = "0.10"
tempfile = "3.8"

# OpenTelemetry for distributed tracing
opentelemetry = { version = "0.21", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["tonic"] }
opentelemetry-jaeger = { version = "0.20", features = ["rt-tokio"] }
tracing-opentelemetry = "0.22"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"
hex = "0.4"
lazy_static = "1.4"


[workspace.lints.rust]
unsafe_code = "forbid"

rust_2018_idioms = { level = "warn", priority = -1 }
missing_debug_implementations = "warn"
missing_docs = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
type_complexity = "allow"

await_holding_lock = "warn"
dbg_macro = "warn"
empty_enum = "warn"
enum_glob_use = "warn"
exit = "warn"
filter_map_next = "warn"
fn_params_excessive_bools = "warn"
if_let_mutex = "warn"
imprecise_flops = "warn"
inefficient_to_string = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
needless_borrow = "warn"
needless_continue = "warn"
option_option = "warn"
rest_pat_in_fully_bound_structs = "warn"
str_to_string = "warn"
suboptimal_flops = "warn"
todo = "warn"
uninlined_format_args = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
verbose_file_reads = "warn"
