[package]
name = "gateway_live_demo"
version.workspace = true
edition.workspace = true
description = "MoFA Cognitive Gateway — end-to-end live demo with web dashboard"

[[bin]]
name = "gateway_live_demo"
path = "src/main.rs"

[dependencies]
mofa-kernel = { path = "../../crates/mofa-kernel", version = "0.1", features = ["config"] }
mofa-foundation = { path = "../../crates/mofa-foundation", version = "0.1" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "trace"] }
